fixed styles on mobile

--- a/admin/assets/stylesheets/elements/_gds-sticky-confirmation-banner.scss
+++ b/admin/assets/stylesheets/elements/_gds-sticky-confirmation-banner.scss
@@ -45,39 +45,18 @@
     margin-left: govuk-em(15px, $govuk-root-font-size);
   }
 
-  @include media(mobile) {
-    overflow: hidden;
-    padding: 0 0 15px 0;
-
-    .govuk-grid-row {
-      margin: 0 -5px;
-    }
-
-    .govuk-button {
-      float: right;
-      width: 49%;
-    }
-
-    .govuk-button--secondary:not(:last-child) {
-      margin-right: 0;
-    }
-
-    .govuk-button--secondary {
-      float: left;
-      margin-top: 0;
-      padding-left: 0;
-      padding-right: 0;
-      text-align: center;
-      width: 49%;
-    }
-  }
-
-  div {
-    padding: 5px;
+  @include govuk-media-query($until: tablet) {
+  .govuk-button--secondary {
+    margin: govuk-em(10px, $govuk-root-font-size) 0;
   }
 }
 
-@include media(mobile) {
+div {
+  padding: 5px;
+}
+}
+
+@include govuk-media-query($until: tablet) {
   .sticky-banner-wrapper {
     padding-bottom: 5px;
   }
